***********************************
CHANGES IN VERSION 2.7.1b

NEW FEATURES

   o Can now generate raw contact maps at the restriction fragment resolution (build_matrix v1.2). To do so, specified a BIN_SIZE=-1. Note that in pratice ICE will be run on these matrices too although its assumption of the equal visibility across bins may require further exploration in the present case.

   o New version of the iced package 0.2.1

SIGNIFICANT USER-VISIBLE CHANGES

   o Change default behavior of split_reads.py utility (output = "./", nreads=20e6)

   o ALLELE_SPECIFIC_SNP file will be detected using the full absolute path or in the annotation folder

   o R1 and R2 reads are now ordered by genomic position in the validPairs files. This might have an impact on the duplicates level

   o BIN_STEP variable from the configuration file is now deprecated

BUG FIXES

   o Fix bug in ice normalization. FILTER_HIGH_COUNT_PERC were not considered in ice_norm.sh

***********************************
CHANGES IN VERSION 2.7.0

NEW FEATURES

   o New parameters - FILTER_HIGH_COUNT_PERC / FILTER_LOW_COUNT_PERC to filter out extreme count before normalization. Note that the parameter SPARSE_FILTERING is now deprecated and replaced by FILTER_LOW_COUNT_PERC

   o New utility ; digest_genome.py which take a fasta file and the name(s) or sequence(s) of the restriction enzyme(s) in order to generate the list of restriction fragments after genome digestion. 

   o HiC-Pro is now able to process data generate from protocols without restriction enzyme such as DNase Hi-C. See the manual for more information

SIGNIFICANT USER-VISIBLE CHANGES

   o The mapping step2 is now optional and will be run only if the ligation site is specified

   o New parameter MIN_CIS_DIST in order to discard all contacts below the specified distance. This is mainly used for DNase Hi-C to remove artefact which are likely to be self ligation product.


BUG FIXES

   o Fix bug in plot scale
