@@ -86,7 +86,7 @@ plotHiCStat <- function(mat, xlab="", legend=TRUE){
   gp <-ggplot(mat, aes(x=p, as.numeric(count), fill=as.character(lab))) +
     geom_bar(width=.7,stat="identity", colour="gray") + 
       theme(axis.title=element_text(face="bold", size=6), axis.ticks = element_blank(),  axis.text.y = element_text(size=5), axis.text.x = element_text(size=6))+
-        xlab(xlab) + ylab("Reads Count") +
+        xlab(xlab) + ylab("Read Counts") +
             scale_x_discrete(breaks=c("1", "2", "3"), labels=c("All Pairs","Valid 3C Pairs","Invalid 3C Pairs"))+
               geom_text(aes(x=p, y=as.numeric(pos), label=paste(perc,"%")),fontface="bold", size=2) +
                 ggtitle("Statistics of Read Pairs Alignment on Restriction Fragments") + theme(plot.title = element_text(lineheight=.8, face="bold", size=6))
